# FishFight

./: Cargo.toml
assets/fxses/: bullet_smoke.json  gun_smoke.json
fishsteam/: README.md
src/: components.rs  items.rs  main.rs
src/capabilities/: physics_object.rs
src/components/: gun_smoke.rs  gunlike_animation.rs
src/gui/: main_menu.rs  style.rs
src/items/: machine_gun.rs  muscet.rs  sproinger.rs  sword.rs
src/nodes/: camera.rs  decoration.rs  level_background.rs  player.rs
