[package]
name = "fishfight"
version = "0.2.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
nanoserde = "0.1.29"
macroquad = { version = "0.4" }
macroquad-platformer = "0.2"
macroquad-tiled = "0.2"
macroquad-profiler = "0.2"
macroquad-particles = {version = "0.2", features = ["nanoserde"] }

quad-gamepad = "0.2.0-alpha"

stunclient = { git = "https://github.com/not-fl3/rust-stunclient", default-features = false }

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad" }
macroquad-platformer = { git = "https://github.com/not-fl3/macroquad" }
macroquad-profiler = { git = "https://github.com/not-fl3/macroquad" }

#miniquad = { path = "../miniquad" }

#macroquad = { path = "../macroquad_0.4" }
#macroquad-particles = { path = "../macroquad_0.4/particles" }
#macroquad-tiled = { path = "../macroquad_0.4/tiled" }
#macroquad-platformer = { path = "../macroquad_0.4/physics-platformer" }
#macroquad-profiler = { path = "../macroquad_0.4/profiler" }
